feat: add initial MinIO configuration

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ KC_POSTGRES_DB=keycloak
 KC_POSTGRES_USER=keycloak_user
 KC_POSTGRES_PASSWORD=REPLACE-ME!
 
-
 KEYCLOAK_HTTP_PORT=8080
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=REPLACE-ME!
@@ -11,3 +10,6 @@ MINIO_API_PORT=9000
 MINIO_CONSOLE_PORT=9001
 MINIO_ROOT_USER=admin
 MINIO_ROOT_PASSWORD=REPLACE-ME!
+
+MINIO_BUCKET=files
+MINIO_REGION=sa-east-1
